--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,14 @@ django-debug-toolbar==3.6.0
 django-flat-responsive==2.0
 django-flat-theme==1.1.4
 django-js-asset==2.0.0
+docxcompose==1.3.6
+docxtpl==0.16.4
 gunicorn==20.1.0
 install==1.3.5
+Jinja2==3.1.2
+lxml==4.9.1
+MarkupSafe==2.1.1
 Pillow==9.2.0
+python-docx==0.8.11
 six==1.16.0
 sqlparse==0.4.2
